tests/ui/async-await/debug-ice-attempted-to-add-with-overflow.stderr
error[E0277]: the trait `IntoFuture` is not implemented for `[usize; usize::MAX]`
  --> $DIR/debug-ice-attempted-to-add-with-overflow.rs:8:37
   |
LL |     [0usize; 0xffff_ffff_ffff_ffff].await;
   |                                    -^^^^^
   |                                    ||
   |                                    |the trait `IntoFuture` is not implemented for `[usize; usize::MAX]`, which is required by `[usize; usize::MAX]: IntoFuture`
   |                                    help: remove the `.await`
   |
   = note: required for `[usize; usize::MAX]` to implement `IntoFuture`

error[E0752]: `main` function is not allowed to be `async`
  --> $DIR/debug-ice-attempted-to-add-with-overflow.rs:6:1
   |
LL | async fn main() {
   | ^^^^^^^^^^^^^^^ `main` function is not allowed to be `async`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0752.
For more information about an error, try `rustc --explain E0277`.
